[tool.poetry]
name = "python_space"
version = "0.1.0"
description = ""
authors = ["AXON <axonasif@gmail.com>"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.11"
art = "^6.0"
requests = "^2.31.0"
google.generativeai.models = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"